--- a/summaries.html
+++ b/summaries.html
@@ -57,11 +57,11 @@
 <div id="app" class="max-w-7xl mx-auto">
     <!-- Applied the 'title-font' class and adjusted weight to bold (700) -->
     <h1 class="title-font text-4xl font-bold text-[#1C6EAE] mb-6 border-b pb-2">
-        Film & Video Platform Comparison</br> (Not yet confirmed / updated with any recent advancements)
+        Film & Video Platform Comparison
     </h1>
     <p class="text-gray-600 mb-8">
-        A detailed look at Direct-to-Consumer (D2C) distribution and Digital Aggregator models.
-    </p>
+        A detailed look at Direct-to-Consumer (D2C) distribution and Digital Aggregator models.</br>
+(Still need to confirm / update with any recent advancements - research further 10.6.25)    </p>
 
     <!-- Table Container -->
     <div class="bg-white shadow-xl rounded-xl overflow-hidden">
