--- a/summaries.html
+++ b/summaries.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video Distribution Platform Comparison</title>
+    <title>Video Distribution Platform Comparison for Review 10.6.25</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Font updated to include Montserrat (body) and Josefin Sans (title) -->
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
